Minor changes and added Jagdfasan

--- a/pug/birds.pug
+++ b/pug/birds.pug
@@ -5,7 +5,7 @@ block content
   p 
     | These are some birds I've seen and managed to capture on camera.
     | The information provided mainly stems from Wikipedia and my own bird-books while the images for each of these birds are taken by myself, that is this website documents the goal to see as many birds as possible. 
-    | My own, boring version of a PokeDex if you will. 
+    | My own, boring version of a PokeDex if you will (#[a(href="https://web.archive.org/web/20210123171007/https://www.nabu.de/tiere-und-pflanzen/voegel/portraets/") NABU reference]). 
     | I will also try to upload every picture to Wikimedia Commons with additional copyright info for those who are interested (User:Eiderente).
   - let year_range = [...Array(((new Date).getFullYear()-2020)+1).keys()].map(el=>el+2020);
   - year_range = year_range.reverse();
