--- a/pug/index.pug
+++ b/pug/index.pug
@@ -5,6 +5,4 @@ block content
   p Hello.
   p I'm a computer science student from Germany.
   p
-    | Check out my Rust linear programming library with a very original and not the slightest bit plagiarized interface (
-    a(href="https://github.com/jonathansc/linprog") GitHub link
-    | ).
+    | Check out my Rust linear programming library with a very original and not the slightest bit plagiarized interface (#[a(href="https://github.com/jonathansc/linprog") GitHub link]).
